@@ -26,6 +26,7 @@
           - move DisplayDataStats() for item recommendation from the program
             to the library
           - improved usage information
+          - rating prediction: use Mono.Options for command-line parsing
         - evaluation
           - add relevant_users feature for item prediction
           - rating evaluation: check arguments for null
